<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/topDecor"
            android:layout_width="32dp"
            android:layout_height="4dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:background="@color/grey" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imgError"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_error_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        android:contentDescription="@string/title_content_des_info"/>

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_error"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/imgError"
        app:layout_constraintStart_toStartOf="@+id/imgError"
        app:layout_constraintTop_toBottomOf="@+id/imgError"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/tvErrorContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_error_content"
        app:layout_constraintEnd_toEndOf="@+id/tvError"
        app:layout_constraintStart_toStartOf="@+id/tvError"
        app:layout_constraintTop_toBottomOf="@+id/tvError"  />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_error_ok"
        android:layout_margin="16dp"
        android:textAllCaps="false"
        android:background="@drawable/bg_button_rounded"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvErrorContent" />

</androidx.constraintlayout.widget.ConstraintLayout>