<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black"
    tools:context=".ui.movie.MovieShowFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:padding="0dp"
                android:textColorHint="@color/text_suggestion"
                app:boxBackgroundColor="@color/background_black_search"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/orange"
                app:boxStrokeWidth="2dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toStartOf="@+id/materialButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_movie_series"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColorHint="@color/text_suggestion" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                app:backgroundTint="@color/orange"
                app:cornerRadius="12dp"
                app:icon="@drawable/ic_search"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGenres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                tools:itemCount="4"
                tools:listitem="@layout/item_list_text_category" />


            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerPopularMovie"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvGenres" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/popular_text"
                            android:textColor="@color/title_text"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="@+id/viewPagerPopularMovie"
                            app:layout_constraintTop_toBottomOf="@+id/viewPagerPopularMovie" />

                        <TextView
                            android:id="@+id/tvSeeAllPopular"
                            android:padding="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/see_all_text"
                            android:textColor="@color/orange"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@+id/textView"
                            app:layout_constraintEnd_toEndOf="@+id/rvUpComingMovies"
                            app:layout_constraintTop_toTopOf="@+id/textView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUpComingMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:itemCount="5"
                tools:listitem="@layout/item_list_movie" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="@string/you_may_like_text"
                            android:textColor="@color/title_text"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="@+id/rvUpComingMovies"
                            app:layout_constraintTop_toBottomOf="@+id/rvUpComingMovies" />

                        <TextView
                            android:padding="8dp"
                            android:id="@+id/tvYouMayLike"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/see_all_text"
                            android:textColor="@color/orange"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@+id/textView2"
                            app:layout_constraintEnd_toEndOf="@+id/rvUpComingMovies"
                            app:layout_constraintTop_toTopOf="@+id/textView2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTopRatedMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/rvUpComingMovies"
                app:layout_constraintStart_toStartOf="@+id/rvUpComingMovies"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:itemCount="5"
                tools:listitem="@layout/item_list_movie" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>